add deps to package.json

--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@types/node": "^16.18.72",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "hds-core": "^3.4.0",
+    "hds-design-tokens": "^3.4.0",
+    "hds-js": "^3.4.0",
+    "hds-react": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
